Split PluginEnvironment into separate fetcher and policy objects http://codereview.appspot.com/1123044
This is in preparation for reworking the URI policy to be expressible
in Cajita and to receive more context about the URI received.

R=jasvir@gmail.com


git-svn-id: https://google-caja.googlecode.com/svn/trunk@4071 360991c0-9f3b-0410-ba87-8b362a00edf4