@@ -1,25 +1,26 @@
 package com.google.caja.demos.playground.server;
 
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.Reader;
 import java.io.StringReader;
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import com.google.caja.demos.playground.client.CajolingServiceResult;
 import com.google.caja.demos.playground.client.PlaygroundService;
-import com.google.caja.lexer.CharProducer;
 import com.google.caja.lexer.ExternalReference;
+import com.google.caja.lexer.FetchedData;
+import com.google.caja.lexer.FilePosition;
 import com.google.caja.lexer.InputSource;
 import com.google.caja.lexer.escaping.UriUtil;
 import com.google.caja.opensocial.DefaultGadgetRewriter;
 import com.google.caja.opensocial.GadgetRewriteException;
-import com.google.caja.plugin.PluginEnvironment;
+import com.google.caja.parser.ParseTreeNode.ReflectiveCtor;
+import com.google.caja.plugin.UriFetcher;
+import com.google.caja.plugin.UriPolicy;
 import com.google.caja.reporting.BuildInfo;
 import com.google.caja.reporting.HtmlSnippetProducer;
 import com.google.caja.reporting.Message;
@@ -38,13 +39,29 @@ import com.google.gwt.user.server.rpc.RemoteServiceServlet;
 @SuppressWarnings("serial")
 public class GWTCajolingServiceImpl extends RemoteServiceServlet
     implements PlaygroundService {
+  private final UriFetcher fetcher;
 
-  private static final PluginEnvironment uriCallback = new PluginEnvironment() {
-    public CharProducer loadExternalResource(
-        ExternalReference ref, String mimeType) {
-      return null;
-    }
+  public GWTCajolingServiceImpl(UriFetcher fetcher) {
+    this.fetcher = fetcher;
+  }
 
+  @ReflectiveCtor
+  public GWTCajolingServiceImpl() {
+    this(new UriFetcher() {
+      @Override
+      public FetchedData fetch(ExternalReference ref, String mimeType)
+          throws UriFetchException {
+        try {
+          return FetchedData.fromConnection(
+              ref.getUri().toURL().openConnection());
+        } catch (IOException ex) {
+          throw new UriFetchException(ref, mimeType, ex);
+        }
+      }
+    });
+  }
+
+  private static final UriPolicy uriPolicy = new UriPolicy() {
     // TODO(jasvir): URIs in some contexts (such as links to new pages) should
     // point back to the gwt cajoling service, while others that load media into
     // an existing page should go through a configurable cajoling service
@@ -95,7 +112,9 @@ public class GWTCajolingServiceImpl extends RemoteServiceServlet
           BuildInfo.getInstance(), mq);
 
       StringReader in = new StringReader(input);
-      rw.rewriteContent(guessURI(url), in, uriCallback, debugMode, output);
+      rw.rewriteContent(
+          guessURI(url), in, UriFetcher.NULL_NETWORK, uriPolicy, debugMode,
+          output);
       String[] htmlAndJs = output.toString().split("<script[^>]*>");
       html = htmlAndJs[0];
       javascript = htmlAndJs.length > 1
@@ -132,18 +151,17 @@ public class GWTCajolingServiceImpl extends RemoteServiceServlet
     return BuildInfo.getInstance().getBuildInfo();
   }
 
-  public String fetch(String url) {
+  public String fetch(String uri) {
     try {
-      URL address;
-      address = new URL(url);
-      Reader r = new InputStreamReader(address.openStream());
-      int c;
-      StringBuffer result = new StringBuffer();
-      while ((c = r.read()) != -1) {
-        result.append((char)c);
-      }
-      return result.toString();
-    } catch (IOException e) {
+      URI address = new URI(uri);
+      return fetcher.fetch(
+          new ExternalReference(address, FilePosition.UNKNOWN), "*/*")
+          .getTextualContent().toString();
+    } catch (URISyntaxException ex) {
+      return null;
+    } catch (UnsupportedEncodingException ex) {
+      return null;
+    } catch (UriFetcher.UriFetchException ex) {
       return null;
     }
   }
